[package]
name = "tundra"
version = "0.1.0"
authors = ["Mustaghees Butt <mustaghees@nezuco.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
log = "0.4.6"
wasm-logger = "0.2.0"
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-utils = "0.1"
web-sys = "0.3"